--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Lavish - Free Responsive Template</title>
+		<title>Abdelrahman's Portfolio</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
         <meta name="author" content="templatemo">
@@ -41,9 +41,9 @@
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Simple and Elegant</h3>
-						<h1>Lavish</h1>
-						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+						<h1>Abdelrahman</h1>
+						<h2 class="rotate">Penetration Tester, Software Developer</h2>
+						<p><b>I am a penetration tester specializing in discovering vulnerabilities of systems like web and mobile applications and trying to report all the vulnerabilities found to make systems secure.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -68,8 +68,8 @@
 								<i class="fa fa-laptop"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Responsive Mobile</h3>
-								<p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.</p>
+								<h3 class="media-heading">Software Developing</h3>
+								<p>Create and design web applications due to the requirements of the user.</p>
 							</div>
 						</div>
 					</div>
@@ -80,8 +80,8 @@
 								<i class="fa fa-link"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">CSS Templates</h3>
-								<p>We provide a wide range of HTML5 templates for free. Please spread a word about us on social media.</p>
+								<h3 class="media-heading">Vulnerabilty Analysis</h3>
+								<p>Do a vulnerability analysis on a software and provide a specific report about the problems found.</p>
 							</div>
 						</div>
 					</div>
@@ -92,8 +92,8 @@
 								<i class="fa fa-paper-plane"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">UI &AMP; UX Design</h3>
-								<p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this free CSS website template.</p>
+								<h3 class="media-heading">Frequent Updates</h3>
+								<p>Checking frequently looking for any vulnerabilities new or not dicovered.</p>
 							</div>
 						</div>
 					</div>
@@ -108,8 +108,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
-						<h2>ABOUT LAVISH</h2>
-						<h4>DESIGNER &AMP; DEVELOPER</h4>
+						<h2>ABOUT Abdelrahman</h2>
+						<h4>Software Developer and Penetration Tester</h4>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
 						<p>Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
 					</div>
@@ -118,7 +118,7 @@
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 							</div>
-						<span>Mobile Apps <small>80%</small></span>
+						<span>Vulnerabilty Analysis <small>80%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 							</div>
@@ -126,7 +126,7 @@
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
 							</div>
-						<span>HTLM5 &AMP; CSS3 <small>90%</small></span>
+						<span>HTLM5 &AMP; CSS3 &AMP; JS<small>90%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 							</div>
