--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h3>Simple and Elegant</h3>
 						<h1>Abdelrahman</h1>
 						<h2 class="rotate">Penetration Tester, Software Developer</h2>
-						<p><b>I am a penetration tester specializing in discovering vulnerabilities of systems like web and mobile applications and trying to report all the vulnerabilities found to make systems secure.</p>
+						<p><b>I am a penetration tester specialized in discovering vulnerabilities of systems like web and mobile applications and trying to report all the vulnerabilities found to make systems secure.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -68,8 +68,8 @@
 								<i class="fa fa-laptop"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Software Developing</h3>
-								<p>Create and design web applications due to the requirements of the user.</p>
+								<h3 class="media-heading">Software Development</h3>
+								<p>Create and design web applications based on the requirements of the user.</p>
 							</div>
 						</div>
 					</div>
@@ -93,7 +93,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Frequent Updates</h3>
-								<p>Checking frequently looking for any vulnerabilities new or not dicovered.</p>
+								<p>Checking frequently looking for any new vulnerabilities or not dicovered ones.</p>
 							</div>
 						</div>
 					</div>
