--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h3>Simple and Elegant</h3>
 						<h1>Abdelrahman</h1>
 						<h2 class="rotate">Penetration Tester, Software Developer</h2>
-						<p><b>I am a penetration tester specialized in discovering vulnerabilities of systems like web and mobile applications and trying to report all the vulnerabilities found to make systems secure.</p>
+						<p><b>I am a penetration tester specialized in discovering vulnerabilities in systems like web and mobile applications and trying to report all the vulnerabilities found to make systems secure.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
